[project]
name = "comfyui-lora-tuner"
description = "For using multiple LoRA easily."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/AonekoSS/ComfyUI-LoRA-Tuner"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "aonekoss"
DisplayName = "ComfyUI-LoRA-Tuner"
Icon = ""
